# colorpicker_experiment

./: README.md  default.node.info.yaml  default.node.yaml  pyproject.toml
src/colorpicker_experiment/: __init__.py  bayes_solver.py  color_picker_app.py  color_picker_remote.py  default.node.info.yaml  default.node.yaml  experiment_design.yaml  utils.py
src/colorpicker_experiment/protocols/: 3x3square.py  alt_row.py  combined_protocol.py  diag.py  mix_colors.py  rainbow_checkered.py  rainbow_checkered_2.py  rinse_plate.py
src/colorpicker_experiment/workflows/: get_plate.workflow.yaml  mix_colors.workflow.yaml  rinse_plate.workflow.yaml  test_transfer.workflow.yaml
