[project]
name = "colorpicker_experiment"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ryan D. Lewis", email = "ryan.lewis@anl.gov"},
]
dependencies = ["pre-commit>=4.1.0", "madsci-client>=0.1.9", "numpy>=2.0.2", "colormath>=3.0.0", "scikit-learn>=1.6.1", "scikit-optimize>=0.10.2", "opencv-python>=4.11.0.86"]
requires-python = ">=3.9.1"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
