[project]
name = "colorpicker_experiment"
version = "0.3.0"
description = "The RPL's Color Picker demonstration Autonomous Experiment Application"
authors = [
    {name = "Ryan D. Lewis", email = "ryan.lewis@anl.gov"},
    {name = "Tobias Ginsburg", email = "tginsburg@anl.gov"},
]
dependencies = [
    "pre-commit>=4.1.0",
    "madsci.common>=0.5.0-rc.2",
    "madsci.client>=0.5.0-rc.2",
    "madsci.experiment_application>=0.5.0-rc.2",
    "numpy>=2.0.2",
    "colormath>=3.0.0",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "opencv-python>=4.11.0.86",
    "globus-compute-sdk>=3.11.0"
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
